[config] Update tomcat 11